# reckoning

./: README.md  dune-project  reckoning.opam
.github/workflows/: workflow.yml
lib/: common.ml  dpll.ml  dune  formulas.ml  intro.ml  prop.ml
test/: dune  ramsey.ml
test/adder.t/: dune  run.t
test/ramsey.t/: dune  run.t
